# aoc2020_cpp

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: lto.helper.cmake  tidy.helper.cmake
common/: CMakeLists.txt
common/include/: read_lines.hh  result_cache.hh  to_string.hh
common/src/: header_check.cc
problem_1/: CMakeLists.txt
problem_1/src/: main.cc
problem_2/: CMakeLists.txt
problem_2/src/: main.cc
